<resources>

    <!--APP-->
    <string name="app_name">NaTour</string>

    <!--WELCOME ACTIVITY-->
    <string name="welcome_text">Welcome to</string>
    <string name="app_description">Explore the places you love\nin a way never done before</string>
    <string name="action">Join for free</string>
    <string name="divider_text">continue with</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="sign_in_button_text">Sign in</string>

    <!--LOGIN ACTIVITY-->
    <string name="login_activity_title">Sign In</string>
    <string name="forgot_password"><u>Forgot password?</u></string>

    <!--REGISTER ACTIVITY-->
    <string name="register_activity_title">Sign Up</string>

    <!--FORGOT PASSWORD ACTIVITY-->
    <string name="forgot_password_activity_title">Reset</string>
    <string name="forgot_password_activity_text">We got you covered\nenter your email below</string>

    <!--RESET PASSWORD ACTIVITY-->
    <string name="reset_password_activity_title">Reset</string>
    <string name="reset_password_text_1">Enter a new password</string>
    <string name="reset_password_text_2">Enter the verification code sent to</string>
    <string name="new_password">New password</string>
    <string name="reset_password_button_text">Reset password</string>


    <!--GENERICS-->
    <string name="name">Name</string>
    <string name="required_username_place_holder">Name*</string>
    <string name="username_place_holder">Name</string>
    <string name="email_place_holder">Email</string>
    <string name="password_place_holder">Password</string>
    <string name="continue_button_text">Continue</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="ok_text">OK</string>
    <string name="current_user_name_text">you</string>


    <!--ERROR ACTIVITY-->
    <string name="exit">Exit</string>


    <!--VERIFY ACTIVITY-->
    <string name="verify_text">Enter the confirmation code send to</string>
    <string name="verify_button_text">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_verification_code"><u>resend verification code</u></string>


    <!--SUCCESSES-->
    <string name="login_success">Logged In</string>
    <string name="logout_success">Logged Out</string>
    <string name="signup_success">Signed Up</string>
    <string name="verify_success">Verified</string>
    <string name="verification_code_sent">Verification code sent</string>
    <string name="password_changed_success">Password changed</string>


    <!--ERRORS-->
    <string name="username_warning">Insert an username.</string>
    <string name="email_warning">"Insert an e-mail.</string>
    <string name="password_warning">Insert a password.</string>
    <string name="verification_code_warning">Insert the verification code.</string>
    <string name="verification_code_warning_1">Complete the verification code.</string>
    <string name="name_warning">Insert a name.</string>
    <string name="name_space_warning">Avoid starting spaces</string>

    <string name="username_length_error">At least 4 characters</string>
    <string name="mail_error">Check your e-mail address</string>
    <string name="password_length_error">At least 8 characters</string>
    <string name="password_length_error_max">At most 20 characters</string>
    <string name="password_space_warning">Avoid spaces</string>
    <string name="password_regex_warning">Must contains a lower case, an upper case and a number</string>

    <string name="account_error">Account doesn\'t exists</string>
    <string name="email_taken_error">Email address already in use</string>
    <string name="wrong_credential_error">Wrong credentials</string>

    <string name="wrong_verification_code_error">Wrong verification code</string>
    <string name="user_not_confirmed_error">User not confirmed</string>
    <string name="too_many_requests_error">Too many requests.</string>

    <string name="warning_text">Warning</string>

    <string name="generic_error">Something went wrong, try again later.</string>
    <string name="resolvable_error">Oh no!\nSomething went wrong</string>
    <string name="resolve_error">Pull to try again</string>

    <string name="duration_error">Insert a valid duration.</string>
    <string name="search_error">No place found</string>
    <string name="start_point_error">Insert at least one point</string>
    <string name="photo_limit">Limit of 6 photos exceeded</string>
    <string name="explicit_content">Explicit content deleted</string>
    <string name="position_error">It seems the positions obtained from some photos are far away from the route (> 100m). To continue delete these photos or change the route.</string>
    <string name="position_error_point">It seems the positions of some photos are in a radius greater than 10 km from the starting point. To continue, delete the photos or change the starting point.</string>

    <string name="retrieve_itinerary_error">Failed to retrieve Itinerary details, try again.</string>
    <string name="photo_upload_failed">Some photos have not been uploaded, try again</string>

    <string name="internet_error">Check your connection\nand try again</string>

    <!--IMAGES DESCRIPTION-->
    <string name="splash_image_description">Splash Image </string>
    <string name="welcome_page_image_description">Welcome page image</string>
    <string name="itinerary_item_image_description">Iter name description</string>


    <!--ITINERARY INSERT-->
    <string name="add_itinerary_title">Add an Itinerary</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="add_button">Add</string>
    <string name="name_itinerary_textHint">What\'s its name?</string>
    <string name="description_itinerary_textHint">Want to tell more about?</string>
    <string name="description_place_holder">Description</string>
    <string name="difficulty_text">What is the Difficulty Level?</string>
    <string name="duration_text">How long\nit lasts?</string>
    <string name="photo_text">Want to show something?</string>
    <string name="track_text">Track</string>
    <string name="or_text">or</string>
    <string name="open_maps_button_text">Open Maps</string>
    <string name="select_photo_button_text">Select</string>
    <string name="image_check_error">Error while image checking, try again</string>
    <string name="select_gpx_button_text">Select GPX</string>
    <string name="file_not_supported_text">File not supported</string>

    <string-array name="difficulties">
        <item>Touristic (T)</item>
        <item>Hiking (E)</item>
        <item>for Experienced Hikers (EE)</item>
        <item>Skilled Equipped Hikers (EEA)</item>
    </string-array>

    <string name="no_photo_selected_text">No photo</string>
    <string name="photo_selected_text">/6 photo selected</string>
    <string name="photo_added_success">Photo added</string>
    <string name="cancel_operation_title">Cancel Operation?</string>
    <string name="cancel_operation_msgText">All progress will be lost</string>
    <string name="search">Search…</string>
    <string name="delete_photo_text">Delete photos</string>
    <string name="loading_text_add_itinerary">Uploading your Itinerary</string>
    <string name="itinerary_insert_failure">Failed to upload Itinerary, try again.</string>
    <string name="photo_upload_wait">Photo uploading in progress…</string>
    <string name="itinerary_insert_success">Enjoy, your itinerary has been shared</string>


    <!--ITINERARY DETAIL-->
    <string name="detail_page_title">Itinerary Details</string>
    <string name="by_text">by</string>
    <string name="start">Start</string>
    <string name="feedback1">Not as expected?</string>
    <string name="feedback2"><u>Send us a feedback</u></string>
    <string name="difficulty_feedback">What difficulty got for you?</string>
    <string name="duration_feedback">How long have you done it?</string>
    <string name="feedback_no_changes">No changes detected</string>
    <string name="loading_text_update_itinerary">Updating the Itinerary</string>
    <string name="feedback_success_text">Thanks for your feedback</string>
    <string name="edited_admin">Edited by a Admin on</string>
    <string name="loading_text_delete_itinerary">Deleting the Itinerary</string>
    <string name="itinerary_delete_failure">Cannot delete the itinerary, try again</string>
    <string name="itinerary_deleted_text">Itinerary deleted</string>
    <string name="itinerary_delete_confirm_text">Do you want to delete this itinerary?</string>
    <string name="itinerary_update_warning">It seems that the itinerary has been updated, please update your itineraries</string>
    <string name="itinerary_photo_error">Failed to retrieve photos</string>

    <!--FOLLOW ITINERARY-->
    <string name="start_point_text">Start Point</string>
    <string name="end_point_text">End Point</string>
    <string name="directions_text">Directions</string>
    <string name="to_start_text">To Start Point</string>
    <string name="info_directions_text">Click on the dots for directions</string>
    <string name="photo_position_error">Cannot insert the photo because is too away from the Itinerary (> 100m).</string>
    <string name="photo_upload_success">Success to upload the photo.</string>
    <string name="photo_upload_error">Failed to upload the photo, try again.</string>

    <!--DRAWER-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>

    <!--MAIN ACTIVITY-->
    <string name="update">Updated itineraries</string>

    <!--PERMISSIONS-->
    <string name="required_permission">Required permission</string>
    <string name="required_permission_description">We need to access your location to provide our service.</string>
    <string name="open_settings">Open settings</string>
    <string name="cancel">Cancel</string>

    <!--CHAT FRAGMENT-->
    <string name="empty">Wow such empty!</string>
    <string name="messages_updated">Messages updated</string>

    <!--MESSAGES ACTIVITY-->
    <string name="message">Message</string>

    <!--TIME-->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="pattern_time">hh:mm a</string>
    <string name="pattern_date">MM/dd/yy</string>
    <string name="pattern_long_date">MMMM dd yyyy</string>


</resources>