<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.itinerary.addItinerary.AddItineraryFragment1">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92"/>

    <TextView
        android:id="@+id/nameHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/euclid_circular_semi_bold"
        android:text="@string/name_itinerary_textHint"
        android:textAlignment="viewStart"
        android:textColor="@color/primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/required_username_place_holder"
        app:startIconDrawable="@drawable/ic_edit"
        app:startIconTint="@color/primary"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:endIconDrawable="@drawable/ic_cancel"
        app:endIconTint="@color/primary"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorEnabled="true"
        android:layout_marginTop="10dp"
        app:errorTextColor="@color/error"
        app:errorIconTint="@color/error"
        app:boxStrokeErrorColor="@color/error"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/nameHint"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect"
            android:maxLength="30"
            android:maxLines="1"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/descriptionHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/euclid_circular_semi_bold"
        android:text="@string/description_itinerary_textHint"
        android:textAlignment="viewStart"
        android:textColor="@color/primary"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description_place_holder"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconDrawable="@drawable/ic_cancel"
        app:endIconMode="clear_text"
        app:endIconTint="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/descriptionHint"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:startIconDrawable="@drawable/ic_note"
        app:startIconTint="@color/primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:maxLength="200"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>